useEffect fetching data and additional translations

--- a/public/locales/fi/translation.json
+++ b/public/locales/fi/translation.json
@@ -1,4 +1,6 @@
 {
     "Home": "Etusivu",
-    "About": "Tietoa meistä"
+    "About": "Tietoa meistä",
+    "This is the front page": "Tämä on etusivu"
+
 }
